feat: implementar booking-service y contenerización multi-stage
* Backend de Reservas:
  - Levantado booking-service (Spring Boot 4.0.5) conectado a PostgreSQL.
  - Implementación de JPA para entidad Reserva y estados (PENDIENTE, COMPLETADO).
  - Creados endpoints para nueva reserva, historial por cliente y simulador PayPal.
* Integración e Infraestructura:
  - Enrutamiento dinámico (/api/bookings/**) agregado al API Gateway bajo el filtro JWT.
  - Actualización del docker-compose.yml con dependencias a postgres-db.
* Dockerización:
  - Creados Dockerfiles multi-stage (JDK 21 Builder -> JRE Alpine) para
    asegurar la compilación y ejecución de los 6 microservicios nativamente.